namespace/media/suwayomi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suwayomi
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suwayomi
  template:
    metadata:
      labels:
        app: suwayomi
    spec:
      runtimeClassName: gvisor
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: suwayomi
          image: ghcr.io/suwayomi/tachidesk:latest
          
          ports:
            - containerPort: 4567
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: media
              mountPath: /home/suwayomi/.local/share/Tachidesk/downloads
            - name: config
              mountPath: /home/suwayomi/.local/share/Tachidesk
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: suwayomi-media
        - name: config
          persistentVolumeClaim:
            claimName: suwayomi-config
