namespace/media/suwayomi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suwayomi
  namespace: media
spec:
  selector:
    app: suwayomi
  ports:
    - port: 4567
      targetPort: 4567
      protocol: TCP
      name: suwayomi
  type: ClusterIP
