namespace/media/suwayomi/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: suwayomi-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`suwayomi.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: suwayomi
          port: 4567
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: suwayomi-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`suwayomi.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: suwayomi
          port: 4567
